--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   profiles-app:
     build: .
@@ -8,6 +7,28 @@ services:
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3005/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    networks:
+      - profiles-network
+    depends_on:
+      - profiles-api
+
+  profiles-api:
+    build:
+      context: .
+      dockerfile: Dockerfile.server
+    container_name: profiles-api
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
+    environment:
+      - NOTION_API_KEY=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
+      - NOTION_DATABASE_ID=1d9b1628346f807196e9d5375dda4eab
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
